making the buttons in the help align correctly

--- a/style/app.scss
+++ b/style/app.scss
@@ -495,7 +495,7 @@ aside {
 
         .button {
             vertical-align: middle;
-            margin-left: 15px;
+            margin-left: 5px;
         }
     }
 }
